force-app/main/default/objects/RFC__c/RFC__c.object-meta.xml
<CustomObject>
    <description>To be used by CCS employees to raise Change Management requests to IT related systems</description>
    <label>RFC</label>
    <nameField>
        <displayFormat>RFC-{DDMMYY}-{0}</displayFormat>
        <label>RFC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFCs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>