force-app/main/default/objects/RFC__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <description>Text entry for field for requester to enter the business case for the change</description>
    <inlineHelpText>A brief statement specifying the “added value” for the change</inlineHelpText>
    <label>Business Case</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>