force-app/main/default/objects/RFC__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field from User</description>
    <inlineHelpText>Name of the individual who is classed as the &apos;Owner&apos; of the system that will be impacted by this change</inlineHelpText>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFCs</relationshipName>
    <type>Lookup</type>
</CustomField>