force-app/main/default/objects/RFC__c/fields/Business_Risk__c.field-meta.xml
<CustomField>
    <fullName>Business_Risk__c</fullName>
    <inlineHelpText>Describe any risks of which authorisers should be aware of</inlineHelpText>
    <label>Business Risk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>