force-app/main/default/objects/RFC__c/fields/CCS_Asset__c.field-meta.xml
<CustomField>
    <fullName>CCS_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCS Asset</label>
    <referenceTo>AssetMgmt__c</referenceTo>
    <relationshipLabel>RFCs</relationshipLabel>
    <relationshipName>RFCs</relationshipName>
    <type>Lookup</type>
</CustomField>