force-app/main/default/objects/RFC__c/fields/Change_Title__c.field-meta.xml
<CustomField>
    <fullName>Change_Title__c</fullName>
    <inlineHelpText>Brief description of what the RFC is to achieve</inlineHelpText>
    <label>Change Title</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>