force-app/main/default/objects/RFC__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Enter details of the proposed change including reason</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>