force-app/main/default/objects/RFC__c/fields/Disaster_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Recovery__c</fullName>
    <inlineHelpText>Implications describe any changes that are required to the DR plan</inlineHelpText>
    <label>Disaster Recovery</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>