force-app/main/default/objects/RFC__c/fields/Google_Drive__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive__c</fullName>
    <inlineHelpText>Please copy &amp; paste a link here to any repository for information relating to this RFC.  Due to capacity constraints no attachments can be stored in SF</inlineHelpText>
    <label>Google Drive</label>
    <type>Url</type>
</CustomField>