force-app/main/default/objects/RFC__c/fields/Implementer_of_RFC__c.field-meta.xml
<CustomField>
    <fullName>Implementer_of_RFC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field from User</description>
    <inlineHelpText>Name of the individual who will be implementing the change to the system</inlineHelpText>
    <label>Implementer of RFC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFCs1</relationshipName>
    <type>Lookup</type>
</CustomField>