force-app/main/default/objects/RFC__c/fields/Other_Impacted_Parties__c.field-meta.xml
<CustomField>
    <fullName>Other_Impacted_Parties__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup from User</description>
    <inlineHelpText>Name of any other impacted parties who need to be included in the approval process</inlineHelpText>
    <label>Other Impacted Parties</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFCs2</relationshipName>
    <type>Lookup</type>
</CustomField>