force-app/main/default/objects/RFC__c/fields/Requester_of_RFC__c.field-meta.xml
<CustomField>
    <fullName>Requester_of_RFC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup from User</description>
    <inlineHelpText>Enter the name of the individual who has requested that this RFC be submitted</inlineHelpText>
    <label>Requester of RFC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFCs3</relationshipName>
    <type>Lookup</type>
</CustomField>