force-app/main/default/objects/RFC__c/fields/Rollback__c.field-meta.xml
<CustomField>
    <fullName>Rollback__c</fullName>
    <inlineHelpText>Describe the provisions made for rollback should the change be unsuccessful</inlineHelpText>
    <label>Rollback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>