force-app/main/default/objects/RFC__c/fields/SalesForce_Case_Reference__c.field-meta.xml
<CustomField>
    <fullName>SalesForce_Case_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup from Cases</description>
    <inlineHelpText>Please enter the corresponding salesforce case reference via the lookup</inlineHelpText>
    <label>Case Reference</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>RFCs</relationshipLabel>
    <relationshipName>RFCs</relationshipName>
    <type>Lookup</type>
</CustomField>