force-app/main/default/objects/RFC__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <inlineHelpText>Name of system that this RFC is to impact</inlineHelpText>
    <label>System Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Cognos</fullName>
            </value>
            <value>
                <fullName>CSC VoIP</fullName>
            </value>
            <value>
                <fullName>EnTrader</fullName>
            </value>
            <value>
                <fullName>Optima</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SalesForce Production</fullName>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>WebEx/MeetingZone</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>