force-app/main/default/objects/RFC__c/fields/System_Name_Other__c.field-meta.xml
<CustomField>
    <fullName>System_Name_Other__c</fullName>
    <label>Other System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>