force-app/main/default/objects/RFC__c/fields/Technical_Impact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Impact__c</fullName>
    <inlineHelpText>Describe any impacts on the system or users of which authorisers should be aware</inlineHelpText>
    <label>Technical Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>