force-app/main/default/objects/RFC__c/fields/Testing__c.field-meta.xml
<CustomField>
    <fullName>Testing__c</fullName>
    <inlineHelpText>Describe how the proposed change will be tested including any dates assigned for testing</inlineHelpText>
    <label>Testing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>