force-app/main/default/objects/RFC__c/fields/Updated_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Updated_Documentation__c</fullName>
    <inlineHelpText>Detail existing system/technical docs that are to be updated e.g. RMADS, system architecture diagrams</inlineHelpText>
    <label>Updated Documentation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>