force-app/main/default/objects/RFC__c/recordTypes/BI_RFC.recordType-meta.xml
<RecordType>
    <fullName>BI_RFC</fullName>
    <active>true</active>
    <description>To be only used by the BI Team (US0579 refers)</description>
    <label>BI RFC</label>
</RecordType>