force-app/main/default/objects/RFC__c/recordTypes/RFC.recordType-meta.xml
<RecordType>
    <fullName>RFC</fullName>
    <active>true</active>
    <description>To be used for General Request for Changes</description>
    <label>RFC</label>
</RecordType>