force-app/main/default/objects/RFC__c/validationRules/Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete</fullName>
    <active>true</active>
    <description>Authorised users to complete RFC only.</description>
    <errorConditionFormula>AND( ISPICKVAL( RFC_Status__c, &apos;Completed&apos;) &amp;&amp; NOT($User.Department = &quot;Apps &amp; Infrastructure&quot; || $Profile.Name = &quot;CCS System Administrator&quot; ))</errorConditionFormula>
    <errorMessage>You do not have permission to complete this Change Request.</errorMessage>
</ValidationRule>