force-app/main/default/objects/RFC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Change_Title__c</columns>
    <columns>Requester_of_RFC__c</columns>
    <columns>RFC_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>