force-app/main/default/objects/RFC__c/listViews/All_Open_RFCs.listView-meta.xml
<ListView>
    <fullName>All_Open_RFCs</fullName>
    <booleanFilter>1 OR (2 AND 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Change_Title__c</columns>
    <columns>Business_Owner__c</columns>
    <columns>Implementation_Date__c</columns>
    <columns>Request_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RFC_Status__c</field>
        <operation>equals</operation>
        <value>Draft,Requested,Approved,Rejected</value>
    </filters>
    <filters>
        <field>RFC_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>All Open RFCs Plus Completed Last Month</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Digital_Services_Senior_Leadership</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>