force-app/main/default/objects/RFC__c/listViews/All_Requested.listView-meta.xml
<ListView>
    <fullName>All_Requested</fullName>
    <columns>NAME</columns>
    <columns>Change_Title__c</columns>
    <columns>Requester_of_RFC__c</columns>
    <columns>RFC_Status__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Implementation_Date__c</columns>
    <columns>Implementer_of_RFC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RFC_Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Requested</label>
</ListView>