force-app/main/default/objects/RFC__c/listViews/RFC_SF_Team_RFC.listView-meta.xml
<ListView>
    <fullName>RFC_SF_Team_RFC</fullName>
    <filterScope>Queue</filterScope>
    <label>RFC SF Team</label>
    <queue>RFC_SF_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>